--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.18.0
+  shared_preferences: ^2.2.2
+
 
   firebase_core: ^2.8.0
   cloud_firestore: ^4.5.0
@@ -21,6 +24,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^3.0.1
+
 
 flutter:
   uses-material-design: true
