--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,8 @@ dependencies:
   cloud_firestore: ^4.15.8
   firebase_auth: ^4.17.0
   fl_chart: ^1.0.0
-  lottie: ^3.3.1
+  lottie: ^3.3.1  
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
