--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   fl_chart: ^1.0.0
   lottie: ^3.3.1  
   google_sign_in: ^6.2.1
+  encrypt: ^5.0.1
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
