--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   google_sign_in: ^6.2.1
   encrypt: ^5.0.1
   crypto: ^3.0.3
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
